[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoon_common"
version = "0.1.0"
description = "Shared models, schemas, and database for Raccoon services"
authors = [{ name = "Kristian Merev", email = "merev.personal@gmail.com" }]
dependencies = []

